2-environment-variables/deployment.yml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: "app-2"
spec:
  replicas: 1
  selector:
    matchLabels:
      instance: app-2
  template:
    metadata:
      labels:
        instance: app-2
    spec:
      containers:
        - name: app-2
          image: oreasek/app-2
          ports:
            - containerPort: 8080 # note that this one matchs with port bellow
