2-environment-variables/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: / # it rewrites the endpoint, for example, remove /api
spec:
  rules:
    - host: "app-2-of-tutorial.com" # update your /etc/hosts !!!
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-2-service # the service name (look at file cluster-ip.yml)
                port: 
                  number: 8080 # the service port (look at file cluster-ip.yml)
